<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hilmi.sistempakar.admin.UbahData">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUbahKode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21dp"
                android:text="@string/kode_gejala"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_ubah_kode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvUbahNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21dp"
                android:text="@string/nama_gejala"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_ubah_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvUbahPenyebab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21dp"
                android:text="@string/penyebab"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_ubah_Penyebab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvUbahSolusi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21dp"
                android:text="@string/solusi"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_ubah_solusi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <Button
                android:id="@+id/btnUbahData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah"
                />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
