<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hilmi.sistempakar.admin.LihatData">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:elevation="5dp">

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlv1">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:text="@string/kode_gejala"/>

            <TextView
                android:id="@+id/tvlihatKode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:layout_marginLeft="5dp"
                android:text="Kode"/>


            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/tvlihatKode"
                android:text="@string/nama_gejala"/>


            <TextView
                android:id="@+id/tvlihatNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_below="@id/tv2"
                android:text="Kode"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/tvlihatNama"
                android:text="@string/penyebab"/>

            <TextView
                android:id="@+id/tvlihatPenyebab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_below="@id/tv3"
                android:text="lihat penyebab"/>


            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/tvlihatPenyebab"
                android:text="@string/solusi"/>

            <TextView
                android:id="@+id/tvlihatSolusi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_below="@id/tv4"
                android:text="solusi"/>
        </RelativeLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>
